--- a/Programs/CountItemSets/CountItemSets.csproj
+++ b/Programs/CountItemSets/CountItemSets.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IFrequentItemsetGenerator.cs" />
+    <Compile Include="ParallelFrequentItemsetGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
