git-svn-id: https://non-blocking.com:8443/svn/HB/Forskning/FBI@1107 ebfeac0a-93c6-ac4a-a35f-0c39878b68e0

--- a/Programs/CountItemSets/CountItemSets.csproj
+++ b/Programs/CountItemSets/CountItemSets.csproj
@@ -77,6 +77,8 @@
     <Compile Include="ParallelFrequentItemsetGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionContext.cs" />
+    <Compile Include="TransactionReader.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
