--- a/Programs/CountItemSets/CountItemSets.csproj
+++ b/Programs/CountItemSets/CountItemSets.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ParallelFrequentItemsetGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ParallelTransactionFrequentItemsetGenerator.cs" />
     <Compile Include="SequentialFrequentItemsetGenerator.cs" />
     <Compile Include="TransactionContext.cs" />
     <Compile Include="TransactionReader.cs" />
