Prepared the ground for more unit-tests of the OpenCL-based GPU variant.

--- a/Programs/CountItemSets/CountItemSets.csproj
+++ b/Programs/CountItemSets/CountItemSets.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="GPUTransactionFrequentItemsetGenerator.cs" />
     <Compile Include="IFrequentItemsetGenerator.cs" />
+    <Compile Include="ITransactionReader.cs" />
     <Compile Include="OpenCLHashTable.cs" />
     <Compile Include="ParallelFrequentItemsetGenerator.cs" />
     <Compile Include="Program.cs" />
