--- a/Programs/OpenCLTests/OpenCLTests.csproj
+++ b/Programs/OpenCLTests/OpenCLTests.csproj
@@ -55,6 +55,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AbstractOpenCLTest.cs" />
+    <Compile Include="FakeTransactionReader.cs" />
+    <Compile Include="GPUTransactionFrequentItemsetGeneratorTests.cs" />
     <Compile Include="OpenCLHashTableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
